--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,10 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.5",
+    "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/swagger": "^7.1.1",
+    "@nestjs/websockets": "^10.0.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
