--- a/backend/package.json
+++ b/backend/package.json
@@ -26,18 +26,20 @@
     "@nestjs/platform-socket.io": "^10.0.5",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.1",
-    "@nestjs/websockets": "^10.0.5",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.0.5",
+    "express-session": "^1.17.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.17",
-    "sqlite3": "^5.1.6"
+    "sqlite3": "^5.1.6",
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
